deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-helloworldapp
  labels:
    app: app-helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-helloworld
  template:
    metadata:
      labels:
        app: app-helloworld
    spec:
      containers:
      - name: c-helloworld
        image: raemondarellano/hello-world:1.0.0-5
        ports:
        - containerPort: 80
