ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-helloworldapp

spec:
  rules:
  - host: "my.projectapp"         # domain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name:  service-helloworldapp
            port:
              number: 80
